# snakes-virus

./: .gitignore  LICENSE  README.mb  README.md  packet.h
control_pannel/: !build.bat  CMakeLists.txt  main.cpp
control_pannel/libs/glad/include/glad/: glad.h
control_pannel/libs/glad/src/: glad.c
control_pannel/src/: compile_commands.json  control.cpp
virus/: !build.bat  CMakeLists.txt  compile_commands.json
virus/src/: compile_commands.json  stupid_windows.h  virus.cpp  virus_features.h
